# DInvoke_rs

./: Cargo.toml  README.md
data/: Cargo.toml
data/src/: lib.rs
dinvoke/: Cargo.toml
dinvoke/src/: lib.rs
dmanager/: Cargo.toml
dmanager/src/: lib.rs
manualmap/: Cargo.toml
manualmap/src/: lib.rs
overload/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
