[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
dinvoke = { path = "../dinvoke" }
data = { path = "../data" }
manualmap = { path = "../manualmap" }
litcrypt2 = "=0.1.2"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]